# multi-robot-fleet-management-system

./: .gitattributes  .gitignore  LICENSE  README.md
docs/: ARCHITECTURE.md  SETUP.md
src/control_board/fms_ctrl_board/: CMakeLists.txt  package.xml
src/control_board/fms_ctrl_board/launch/: fms_ctrl_board.launch.py
src/control_board/fms_ctrl_board/launch/setup_launch/: clear_costmap.launch.py  follow_poses.launch.py  ns_bringup.launch.py
src/robot/fms_robot/: CMakeLists.txt  package.xml
src/robot/fms_robot/launch/: fms_robot.launch.py  multi_robot_controller.launch.py  single_robot_controller.launch.py
src/robot/ns_turtlebot3_navigation2/: CMakeLists.txt  package.xml
src/robot/ns_turtlebot3_navigation2/launch/: ns_turtlebot3_navigation2.launch.py
src/robot/ns_turtlebot3_navigation2/launch/nav2_bringup/: bringup_launch.py  localization_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py
src/robot/ns_turtlebot3_navigation2/params/: nav2_params.yaml
src/robot/robot_manager/: CMakeLists.txt  package.xml
src/robot/robot_manager/include/robot_manager/: controller.h  dwa.h  fms_ctrl_node.h  fms_single_ctrl_node.h  robot_manager.h
src/robot/robot_manager/src/: controller.cpp  dwa.cpp  fms_ctrl_node.cpp  fms_single_ctrl_node.cpp  robot_manager.cpp
src/server/fms_core/: CMakeLists.txt  package.xml
src/server/fms_core/include/ECBS/: constraint.h  ecbs.h  highlevel_node.h  lowlevel_node.h  path_planner.h  solver_map.h
src/server/fms_core/include/fleet_manager/: eses.h  fleet_manager.h  multi_agent_route_planner.h  multi_agent_status_monitor.h  multi_agent_task_planner.h  parse_graph.hpp  robot_states.hpp  route_table.h  task_states.hpp  topological_map.h  utils.h
src/server/fms_core/src/ECBS/: ecbs.cpp  path_planner.cpp  solver_map.cpp
src/server/fms_core/src/fleet_manager/: eses.cpp  fleet_manager.cpp  multi_agent_route_planner.cpp  multi_agent_status_monitor.cpp  multi_agent_task_planner.cpp  parse_graph.cpp  route_table.cpp  topological_map.cpp  utils.cpp
src/server/fms_msgs/: CMakeLists.txt  package.xml
src/server/fms_msgs/msg/: CurrStep.msg  Node.msg  RobotInfo.msg  RobotModel.msg  RobotState.msg  RouteInfo.msg  TaskInfo.msg  TaskState.msg  Tasks.msg
src/server/fms_msgs/msg/route_table_msg/: AgentRouteTable.msg  NodeRT.msg  RouteTable.msg  RouteTableNode.msg
src/server/fms_msgs/srv/: ActiveRobot.srv  CancelTask.srv  CommandRobot.srv  DisableRegion.srv  SubmitTask.srv  Terminate.srv
src/server/fms_panel/: CMakeLists.txt  package.xml  plugin_description.xml
src/server/fms_panel/include/fms_panel/: fms_panel.h
src/server/fms_panel/src/: fms_panel.cpp
src/server/fms_server/: CMakeLists.txt  package.xml
src/server/fms_server/cfg/disable_region/Warehouse/: disable_region.yaml
src/server/fms_server/cfg/favorite/Warehouse/: favorite.yaml
src/server/fms_server/cfg/graph/Amazon/: topological_map.yaml
src/server/fms_server/cfg/graph/IncheonTP/: extended_lanes.yaml  extended_nodes.yaml  topological_map.yaml  topological_map_org.yaml
src/server/fms_server/cfg/graph/Lab/: topological_map.yaml
src/server/fms_server/cfg/graph/Large_warehouse/: extended_lanes.yaml  extended_nodes.yaml  topological_map.yaml
src/server/fms_server/cfg/graph/Warehouse/: extended_lanes.yaml  extended_nodes.yaml  topological_map.yaml
src/server/fms_server/cfg/graph/aws/: topological_map.yaml
src/server/fms_server/cfg/graph/kiva/: topological_map.yaml
src/server/fms_server/cfg/graph/sm_lab/: topological_map.yaml
src/server/fms_server/cfg/graph/ssh/: topological_map.yaml
src/server/fms_server/cfg/graph/testbed/: topological_map.yaml
src/server/fms_server/cfg/graph/testroom_1/: topological_map.yaml
src/server/fms_server/cfg/graph/testroom_2/: topological_map.yaml
src/server/fms_server/cfg/graph/testroom_3/: topological_map.yaml
src/server/fms_server/cfg/graph/testroom_4/: topological_map.yaml
src/server/fms_server/cfg/graph/testroom_demo/: topological_map.yaml
src/server/fms_server/cfg/maps/Amazon/: stage.world
src/server/fms_server/cfg/maps/IncheonTP/: map_image.yaml  stage.world
src/server/fms_server/cfg/maps/Lab/: map_image.pgm  stage.world
src/server/fms_server/cfg/maps/Large_warehouse/: map_image.yaml  stage.world
src/server/fms_server/cfg/maps/Warehouse/: map_image.yaml
src/server/fms_server/cfg/maps/aws/: map_image.yaml  stage.world
src/server/fms_server/cfg/maps/kiva/: stage.world
src/server/fms_server/cfg/maps/sm_lab/: map_image.pgm  map_image.yaml  map_image_graph.pgm
src/server/fms_server/cfg/maps/ssh/: map_image.yaml  stage.world
src/server/fms_server/cfg/maps/testbed/: map_image.yaml
src/server/fms_server/cfg/maps/testroom_1/: map_image.pgm  map_image.yaml
src/server/fms_server/cfg/maps/testroom_2/: map_image.pgm  map_image.yaml  stage.world
src/server/fms_server/cfg/robot_model/: robot_model_0.yaml  robot_model_1.yaml  turtlebot3_waffle.yaml
src/server/fms_server/cfg/rviz/: IncheonTP.rviz  Large_warehouse.rviz  Warehouse_org.rviz  aws.rviz  kiva.rviz  ssh.rviz  testroom_3.rviz
src/server/fms_server/envs/: Large_warehouse.yaml  Warehouse.yaml
src/server/fms_server/exe/: run_fms
src/server/fms_server/launch/: FMS.launch.py  fleet_manager.launch.py  fms_server.launch.py  rviz.launch.py
src/simulation/fms_simulation/: CMakeLists.txt  package.xml
src/simulation/fms_simulation/launch/: fms_sim_gazebo.launch.py  fms_sim_stage.launch.py  fms_stage_robot.launch.py  fms_stage_run.launch.py  run_stage.launch.py  single_robot_controller.launch.py  stage.launch.py
src/testbed/fms_custom_testbed/: CMakeLists.txt  package.xml  readme.md
src/testbed/fms_custom_testbed/env-hooks/: fms_custom_tb.dsv.in
src/testbed/fms_custom_testbed/launch/: fms_ssh_tb.launch.py
src/testbed/fms_custom_testbed/models/ssh/: model.config  model.sdf
src/testbed/fms_custom_testbed/worlds/: ssh.world
src/tools/fms_route_viz/: package.xml  setup.cfg  setup.py
src/tools/fms_route_viz/fms_route_viz/: __init__.py  route_viz_node.py
src/tools/fms_route_viz/test/: test_copyright.py  test_flake8.py  test_pep257.py
(+36 files in other folders)
