<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fms_route_viz</name>
  <version>0.0.0</version>
  <description>Visualize route-table dependencies published by the fleet manager.</description>
  <maintainer email="yibangwon1392@gmail.com">Yi Bang Won</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>fms_msgs</depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-networkx</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
